Changelog
=========

0.9.3 (2012-11-27)
------------------

- Enhanced 'runAsyncTest' to accept 'loop_timeout' and 'loop_count' parameters.
- Fixed optional json-serializer to try to import 'json' at first and only then
  'simplejson'.

0.9.2 (2012-09-18)
------------------

- Pinned z3c.unconfigure==1.0.1.
- Added test fixture to be used with ZSERVER-fixtures to support Selenium-testing.
- Fixed consuming server to default to 'Anonymous User' instead of None.
- Added runAsyncTest-helper for running tests depending on the asyncore loop.
  Added consuming server for ZAMQP-layer.

0.9.1 (2012-09-18)
------------------

- Fixed to not set correlation_id-property for message if the given
  correlation_id is None.

0.9.0 (2012-09-17)
------------------

- Added alias 'Producer.register' for VTM._register.
- Renamed 'connected'-property to 'is_connect'.

0.8.1 (2012-09-06)
------------------

- Fixed queue length helpers to use BlockingChannel-helper properly.

0.8.0 (2012-09-06)
------------------

- Fixed consumers without marker interface not to start consuming.
- Enhanced undolog for transactions by 'zamqp-consumer'-view.
- Fixed consuming view to annotate transaction with the user configured for the
  current consuming service.
- Added separate auto_delete-setting for exchanges and queues. Previously
  auto_delete was set as negation of durability, which remains the default.
- Added connection configuration to default with implicit default producer
  registration (= producer with the same name/id as the connection, but no any
  special routing).
- Added support for custom 'x-cookie-auth' header. Its value will be set to
  value of '__ac' cookie for AMQP request to allow PAS-authentication for
  logged in user (e.g. to support authenticated asyncronous tasks).
- Added __len__ for consumer and producer for getting the queue length (if the
  related queue is defined) using blocking channel.
- Added BlockingChannel wrapper to be used with 'with' statement to create