@@ -8,11 +8,13 @@
 ###
 """Named serializer utilities"""
 
+import csv
+import cPickle
+import StringIO
+
 from grokcore import component as grok
 
 from collective.zamqp.interfaces import ISerializer
-
-import cPickle
 
 
 class PlainTextSerializer(grok.GlobalUtility):
@@ -36,6 +38,93 @@ class PlainTextSerializerAlias(PlainTextSerializer):
 class PlainTextSerializerByMimeType(PlainTextSerializer):
     grok.provides(ISerializer)
     grok.name(PlainTextSerializer.content_type)
+
+
+class CSVSerializer(grok.GlobalUtility):
+    """Message serializer/deserializer between unicode dictionaries and
+    RFC4180 style UTF8-encoded CSV"""
+
+    grok.provides(ISerializer)
+    grok.name("csv")
+
+    content_type = "text/csv"
+
+    def serialize(self, body):
+        assert hasattr(body, "__iter__"),\
+            u"Message body must be iterable for CSV serializer."
+
+        data = tuple(iter(body))
+
+        assert len(data),\
+            u"Message body cannot be empty (iterable) for CSV serializer."
+
+        sample = data[0]
+
+        assert hasattr(sample, 'iterkeys')\
+            and hasattr(sample, 'itervalues')\
+            and hasattr(sample, 'iteritems'),\
+            u"Message items must be dictionary like objects."
+
+        class RFC4180Dialect(csv.Dialect):
+            delimiter = ','
+            quotechar = '"'
+            escapechar = '\\'
+            lineterminator = '\r\n'
+            doublequote = True
+            quoting = csv.QUOTE_ALL
+            skipinitialspace = False
+            strict = False
+
+        def encode(s):
+            return type(s) == unicode and s.encode('utf-8') or s
+
+        def iter_encode(iterable):
+            return map(encode, iterable)
+
+        class UTF8DictWriter(csv.DictWriter):
+
+            def writeheader(self):
+                header = dict(zip(self.fieldnames,
+                                  iter_encode(self.fieldnames)))
+                self.writerow(header)
+
+            def writerow(self, row):
+                row = dict(map(lambda x: (x[0], encode(x[1])),
+                               row.iteritems()))
+                csv.DictWriter.writerow(self, row)
+
+        stream = StringIO.StringIO()
+        writer = UTF8DictWriter(stream, iter_encode(sample.iterkeys()),
+                                dialect=RFC4180Dialect)
+        writer.writeheader()
+        writer.writerows(data)
+        return stream.getvalue()
+
+    def deserialize(self, body):
+
+        def decode(s):
+            return type(s) == str and unicode(s, 'utf-8', 'ignore') or s
+
+        def iter_decode(iterable):
+            return map(decode, iterable)
+
+        class UnicodeDictReader(csv.DictReader):
+
+            def next(self):
+                d = csv.DictReader.next(self)
+                return dict(map(lambda x: (decode(x[0]), decode(x[1])),
+                                d.iteritems()))
+
+        stream = StringIO.StringIO()
+        stream.write(body)
+        stream.seek(0)
+        reader = UnicodeDictReader(stream)
+        return tuple(reader)
+
+
+class CSVSerializerByMimeType(CSVSerializer):
+    grok.provides(ISerializer)
+    grok.name(CSVSerializer.content_type)
 
 
 class PickleSerializer(grok.GlobalUtility):
