@@ -1,6 +1,10 @@
 Changelog
 =========
 
+- Added 'text/csv' serializer (for serializing iterable container of
+  dictionaries into RFC4180 CSV data and deserializing such messages into
+  tuple of dictionaries)
+
 0.9.3 (2012-11-27)
 ------------------
 
